# BookmarksReview

./: .env.e2e  .env.example  .gitignore  README.md  TASKS.md  TechnicalTask.md  integration_tests_documentation.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_bookmarks.json  test_coverage_plan.md  test_long_paths.json
.kilocode/: memory-bank.md
.kilocode/rules/: project.md
prompts/: summarize_prompt.txt
src/: config.py  diagram.py  fetcher.py  logger.py  main.py  models.py  parser.py  progress.py  summarizer.py  utils.py  writer.py
tests/: conftest.py  test_check_error_functionality.py  test_config.py  test_diagram.py  test_diagram_integration.py  test_e2e.py  test_error_handling_integration.py  test_fetcher.py  test_filesystem_integration.py  test_integration.py  test_integration_long_paths.py  test_integration_progress.py  test_logger.py  test_main.py  test_mock_server.py  test_parser.py  test_progress.py  test_resume_integration.py  test_socks5_proxy.py  test_summarizer.py  test_utils.py  test_writer.py
tests/data/: README.md
tests/data/bookmarks/: e2e_test_bookmarks.json  empty.json  large.json  nested.json  simple.json
tests/data/html/: complex.html  large.html  russian.html  simple.html
tests/data/responses/: empty.json  error.json  success.json
